k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asos-map
  namespace: windborne
  labels:
    app: asos-map
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: asos-map
  template:
    metadata:
      labels:
        app: asos-map
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: asos-map
          image: docker.io/themdq/asos-map:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
