k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asos-map
  namespace: windborne
spec:
  selector:
    app: asos-map
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
